fix problems url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i> ΑΡΧΙΚΗ</a>
         <a href="#news">ΕΠΙΚΟΙΝΩΝΙΑ</a>
         <a href="#contact">ΠΡΟΤΑΣΕΙΣ</a>
-        <a href="http://localhost/ola.php">ΠΡΟΒΛΗΜΑΤΑ</a>
+        <a href="#problems">ΠΡΟΒΛΗΜΑΤΑ</a>
 
         <div class="dropdown">
             <button class="dropbtn">ΜΟΙΡΑΣΟΥ
