--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="topnav" id="myTopnav">
-        <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i> ΑΡΧΙΚΗ</a>
+        <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i>ΑΡΧΙΚΗ</a>
         <a href="#news">ΕΠΙΚΟΙΝΩΝΙΑ</a>
         <a href="#contact">ΠΡΟΤΑΣΕΙΣ</a>
         <a href="#problems">ΠΡΟΒΛΗΜΑΤΑ</a>
@@ -25,7 +25,7 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="http://localhost/apostoli_provlimatos.php">ΕΝΑ ΠΡΟΒΛΗΜΑ</a>
+                <a href="#">ΕΝΑ ΠΡΟΒΛΗΜΑ</a>
                 <a href="#">ΜΙΑ ΙΔΕΑ</a>
 
             </div>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="container">
-
+        <!-- New post  -->
     </div>
 
 
@@ -72,14 +72,8 @@
     </div>
 
 
-    <div class="footer row">
-        Created with <i class="fa fa-heart" aria-hidden="true"></i>
-        by <a href="https://github.com/tasosgrv"><i class="fa fa-github" aria-hidden="true"></i>
-            </i>
-            Tasos Grv</a>
-    </div>
-
-    <script type="text/javascript" src="script.js"></script>
+    <!--#include virtual="footer.html" --> 
+    <script type="text/javascript" src="script.js"></script> 
 </body>
 
 </html>
