navbar on new file

--- a/index.html
+++ b/index.html
@@ -14,27 +14,10 @@
 
 <body>
 
-    <div class="topnav" id="myTopnav">
-        <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i>ΑΡΧΙΚΗ</a>
-        <a href="#news">ΕΠΙΚΟΙΝΩΝΙΑ</a>
-        <a href="#contact">ΠΡΟΤΑΣΕΙΣ</a>
-        <a href="#problems">ΠΡΟΒΛΗΜΑΤΑ</a>
 
-        <div class="dropdown">
-            <button class="dropbtn">ΜΟΙΡΑΣΟΥ
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="#">ΕΝΑ ΠΡΟΒΛΗΜΑ</a>
-                <a href="#">ΜΙΑ ΙΔΕΑ</a>
-
-            </div>
-        </div>
-        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
-    </div>
-
+<!--#include virtual="navbar.html" --> 
     <div class="container">
-        <!-- New post  -->
+        <!-- New post     -->
     </div>
 
 
@@ -58,17 +41,6 @@
             <p>
                 <input type="submit" name="submit" value="Submit" onclick="ShowPost(); return false;" />
         </form>
-    </div>
-
-
-    <div class="box row">
-        <h2>tasosgrv</h2>
-
-        <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Telegram</li>
-        </ul>            
     </div>
 
 
