Revert "fix problems url"
This reverts commit 4a0df59d82b1cd9d20be6677069e7916bb41be23.

--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
 </head>
 
 <body>
+
     <div class="topnav" id="myTopnav">
-        <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i>ΑΡΧΙΚΗ</a>
+        <a href="#" class="active"><i class="fa fa-home" aria-hidden="true"></i> ΑΡΧΙΚΗ</a>
         <a href="#news">ΕΠΙΚΟΙΝΩΝΙΑ</a>
         <a href="#contact">ΠΡΟΤΑΣΕΙΣ</a>
-        <a href="#problems">ΠΡΟΒΛΗΜΑΤΑ</a>
+        <a href="http://localhost/ola.php">ΠΡΟΒΛΗΜΑΤΑ</a>
 
         <div class="dropdown">
             <button class="dropbtn">ΜΟΙΡΑΣΟΥ
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#">ΕΝΑ ΠΡΟΒΛΗΜΑ</a>
+                <a href="http://localhost/apostoli_provlimatos.php">ΕΝΑ ΠΡΟΒΛΗΜΑ</a>
                 <a href="#">ΜΙΑ ΙΔΕΑ</a>
 
             </div>
         </div>
-
-
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </div>
 
     <div class="container">
-        <!-- New post     -->
+
     </div>
 
 
@@ -62,12 +61,24 @@
     </div>
 
 
+    <div class="box row">
+        <h2>tasosgrv</h2>
+
+        <ul>
+            <li>Facebook</li>
+            <li>Twitter</li>
+            <li>Telegram</li>
+        </ul>            
+    </div>
+
+
     <div class="footer row">
         Created with <i class="fa fa-heart" aria-hidden="true"></i>
         by <a href="https://github.com/tasosgrv"><i class="fa fa-github" aria-hidden="true"></i>
             </i>
             Tasos Grv</a>
     </div>
+
     <script type="text/javascript" src="script.js"></script>
 </body>
 
