--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </li>
 
 
-        <li class="dropdown dropbtn"">
+        <li class="dropdown">
             <a>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span> E-MAILS</span>
