--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     </ul>
 
     <div class="box">
-        <img src="img_avatar.png" alt="avatar" style="float: left; width: 25%; height: 50%;" />
+        <img src="img_avatar.png" alt="avatar" class="avatar"/>
         <div class="card-info">
-            <h2>About me</h2>
+            <h2>Tasos Grv</h2>
             <ul>
-                <li><i class="fa fa-user-o" aria-hidden="true"></i> Name:</li>
-                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday:</li>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location:</li>
+                <li><i class="fa fa-user-o" aria-hidden="true"></i> Name: mploapla sdsdfds</li>
+                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 12/12/2000</li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Ulan Bator</li>
             </ul>
         </div>
     </div>
