added buttons and gfonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Hammersmith+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -67,12 +68,13 @@
     <div class="box">
         <img src="img_avatar.png" alt="avatar" class="avatar"/>
         <div class="card-info">
-            <h2>Tasos Grv</h2>
+            <h2>Anastasios Gravvanis</h2>
             <ul>
-                <li><i class="fa fa-user-o" aria-hidden="true"></i> Name: mploapla sdsdfds</li>
                 <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 12/12/2000</li>
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Ulan Bator</li>
             </ul>
+            <button><i class="fa fa-download" aria-hidden="true"></i> DOWNLOAD</button>
+            <button><i class="fa fa-user" aria-hidden="true"></i> ABOUT ME</button>
         </div>
     </div>
 
