--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Hammersmith+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bubbler+One|Courgette|Fredoka+One|Hammersmith+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -70,12 +70,22 @@
         <div class="card-info">
             <h2>Anastasios Gravvanis</h2>
             <ul>
-                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 12/12/2000</li>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Ulan Bator</li>
+                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 12/12/2000 </li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Ulan Bator </li>
             </ul>
             <button><i class="fa fa-download" aria-hidden="true"></i> DOWNLOAD</button>
-            <button><i class="fa fa-user" aria-hidden="true"></i> ABOUT ME</button>
+            <button id="btn-about"><i class="fa fa-user" aria-hidden="true"></i> ABOUT ME</button>
         </div>
+    </div>
+
+    <div id="about-modal" class="bg-modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>About me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus velit nisl, sollicitudin ut ligula non, dignissim varius tortor. Maecenas nec metus nisi. Aliquam commodo turpis id neque cursus dictum. Cras auctor, nibh eget suscipit interdum, mauris mauris sollicitudin purus, sed pharetra nulla leo viverra sem. Sed placerat porttitor ornare. Pellentesque quis faucibus est. Nullam lacus dolor, lacinia a justo at, cursus pulvinar quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus enim erat, feugiat vitae lorem quis, sagittis dictum nisi. Vestibulum vitae velit ut sapien lobortis fringilla. Nullam porttitor eu nunc in mattis. In at fringilla ex. Cras a mauris eu dui lacinia auctor. Phasellus vitae justo mauris.                
+                Sed quis lacinia turpis. Morbi leo elit, porta et urna a, malesuada condimentum nisl. Vivamus tincidunt venenatis placerat. Integer nibh purus, commodo id nisl vitae, ornare congue arcu. Morbi vel ullamcorper nibh, vitae vestibulum tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet laoreet nibh. Pellentesque in mi mollis, aliquam nulla at, pulvinar nunc. Integer et mi dui.
+            </p>
+            <h5>Last Changed: 30/10/2018</h5>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
