--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+    <title>Anastasios Gravvanis</title>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1253">
     <meta name="viewport" content="width=device-width, initial-scale=1">
