--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bubbler+One|Courgette|Fredoka+One|Hammersmith+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -66,7 +66,7 @@
     </ul>
 
     <div class="box">
-        <img src="img_avatar.png" alt="avatar" class="avatar"/>
+        <img src="img/img_avatar.png" alt="avatar" class="avatar"/>
         <div class="card-info">
             <h2>Anastasios Gravvanis</h2>
             <ul>
@@ -88,7 +88,7 @@
             <h5>Last Changed: 30/10/2018</h5>
     </div>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="src/script.js"></script>
 </body>
 
 </html>
