Birthday and location added

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="card-info">
             <h2>Anastasios Gravvanis</h2>
             <ul>
-                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 12/12/2000 </li>
-                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Ulan Bator </li>
+                <li><i class="fa fa-birthday-cake" aria-hidden="true"></i> Birthday: 15/12/1993 </li>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i> Location: Trikala, Greece </li>
             </ul>
             <button><i class="fa fa-download" aria-hidden="true"></i> DOWNLOAD</button>
             <button id="btn-about"><i class="fa fa-user" aria-hidden="true"></i> ABOUT ME</button>
