chenges to avatar, font size and sidebar

--- a/index.html
+++ b/index.html
@@ -53,15 +53,11 @@
         </li>
 
 
-        <li class="dropdown">
-            <a>
+        <li>
+            <a href="mailto:tasosgr4@gmail.com" alt="Email">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> E-MAILS</span>
+                <span> E-MAIL</span>
             </a>
-            <div class="dropdown-content">
-                <a href="mailto:tasos_gr93@hotmail.com">Hotmail</a>
-                <a href="mailto:tasosgr4@gmail.com">Gmail</a>
-            </div>
         </li>
     </ul>
 
